--- a/src/app/deletar-categoria/deletar-categoria.component.html
+++ b/src/app/deletar-categoria/deletar-categoria.component.html
@@ -13,13 +13,10 @@
         </div>
     </div>
 
-
-
-
     <div class="row mt-5 mb-5">
         <div class="col-md-12 d-flex justify-content-center">
             <button type="submit" class="btn bgcor1 mr-4 " >Não</button>
-            <button type="submit" class="btn bgcor" >Sim</button>
+            <button (click)="deletarCategoria()"  type="submit" class="btn bgcor" >Sim</button>
         </div>
     </div>
 
