--- a/src/app/fundadores/fundadores.component.html
+++ b/src/app/fundadores/fundadores.component.html
@@ -7,38 +7,44 @@
 </div>
 
 
-<div class="container-fluid ">
-    <div class="row d-flex justify-content-center ">
+<div class="container-fluid">
+    <div class="row d-flex justify-content-center">
 
-         <div class="col-md-3 mr-5">
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/7xdsb4C.jpg?1" alt="" style="width:300px;height:300px;">
-                    </div>
-                    <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/HWXcXCF.jpg?1" alt=""
-                            style="width:300px;height:300px;">
+        <div class="col-md-3 mr-5 ">
+            <div class="col-md-12 ">
+
+                <div class="flip-card">
+                    <div class=" flip-card-inner">
+                        <div class="flip-card-front">
+                            <img class="img" src="https://i.imgur.com/7xdsb4C.jpg?1" alt=""
+                                style="width:300px;height:300px;">
+                        </div>
+                        <div class="flip-card-back">
+                            <img class="img" src="https://i.imgur.com/HWXcXCF.jpg?1" alt=""
+                                style="width:300px;height:300px;">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <h3 class="text-center cor m-0 mt-3">Betina Machado</h3>
-            <div class="d-flex justify-content-center m-0 p-0 ">
-                <ul class="social">
-                    <li>
-                        <a href="https://www.linkedin.com/in/betina-machado/" target="_blank">
-                            <i class="bi bi-linkedin icon m-0"></i>
-                        </a>
-                    </li>
 
-                    <li>
-                        <a href="https://github.com/BetinaMachado" target="_blank">
-                            <i class="bi bi-github icon "></i>
-                        </a>
-                    </li>
-                </ul>
+                <h3 class="text-center cor m-0 mt-3">Betina Machado</h3>
+
+                <div class="d-flex justify-content-center m-0 p-0 ">
+                    <ul class="social">
+                        <li>
+                            <a href="https://www.linkedin.com/in/betina-machado/" target="_blank">
+                                <i class="bi bi-linkedin icon m-0"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://github.com/BetinaMachado" target="_blank">
+                                <i class="bi bi-github icon "></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <p class="card-text text-center">Desenvolvedora Java FullStack, Gaúcha, residindo em São Paulo/SP</p>
             </div>
-            <p class="card-text text-center">Desenvolvedora Java FullStack, Gaúcha, residindo em São Paulo/SP</p>
         </div>
 
 
@@ -46,7 +52,8 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/1DY7U9G.jpg?1" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/1DY7U9G.jpg?1" alt=""
+                            style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <img class="img" src="https://i.imgur.com/1DY7U9G.jpg?1" alt=""
@@ -115,7 +122,7 @@
 <div class="container-fluid mt-5">
     <div class="row d-flex justify-content-center ">
 
-         <div class="col-md-3 mr-5">
+        <div class="col-md-3 mr-5">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -151,7 +158,8 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/lTQ4TXJ.jpg?1" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/lTQ4TXJ.jpg?1" alt=""
+                            style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <img class="img" src="https://i.imgur.com/lTQ4TXJ.jpg?1" alt=""
@@ -186,8 +194,7 @@
                         <img class="img" src="https://i.imgur.com/MgHpfGU.png" alt="" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/MgHpfGU.png" alt=""
-                            style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/MgHpfGU.png" alt="" style="width:300px;height:300px;">
                     </div>
                 </div>
             </div>
@@ -207,7 +214,8 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedor Java FullStack e cursando Gestão Tecnologia da Informação!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack e cursando Gestão Tecnologia da Informação!
+            </p>
         </div>
 
     </div>
@@ -218,7 +226,7 @@
 <div class="container-fluid mt-5 mb-5">
     <div class="row d-flex justify-content-center ">
 
-        <div class="col-md-3 mr-5"> 
+        <div class="col-md-3 mr-5">
 
             <div class="flip-card">
                 <div class="flip-card-inner">
@@ -247,7 +255,8 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedor Java Fullstack, apaixonado pelo empreendedorismo, tecnologia e finanças!</p>
+            <p class="card-text text-center">Desenvolvedor Java Fullstack, apaixonado pelo empreendedorismo, tecnologia
+                e finanças!</p>
         </div>
 
     </div>
