--- a/src/app/ongs/ongs.component.html
+++ b/src/app/ongs/ongs.component.html
@@ -23,7 +23,7 @@
             que apoiam catadores de recicláveis.
           </p>
 
-          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button [routerLink]="(['/produtos'])" class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
           <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
 
         </div>
@@ -50,7 +50,7 @@
             conscientização social voltada para problemas como desigualdade e a extrema pobreza.
           </p>
 
-          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button [routerLink]="(['/produtos'])" class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
           <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
 
         </div>
@@ -77,7 +77,7 @@
             e gerando maior fonte de renda para as famílias envolvidas.
           </p>
 
-          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button [routerLink]="(['/produtos'])" class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
           <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
 
         </div>
@@ -107,7 +107,7 @@
             mudar o mundo.
           </p>
 
-          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button [routerLink]="(['/produtos'])" class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
           <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
 
         </div>
