--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,8 +8,8 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto d-flex align-items-center">
       <li class="nav-item active">
-        <a [routerLink]="[('/home')]"><img src="https://i.imgur.com/S4caNKA.jpg" alt="Logo do projeto" width="70px" height="70px"
-          class="img-fluid rounded-circle mr-3"></a>
+        <a [routerLink]="[('/home')]"><img src="https://i.imgur.com/S4caNKA.jpg" alt="Logo do projeto" width="70px"
+            height="70px" class="img-fluid rounded-circle mr-3"></a>
         <!--<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
       </li>
       <li class="nav-item">
@@ -46,9 +46,14 @@
       <button class="btn bgcor my-2 my-sm-0 mr-4" type="submit">Pesquisar</button>
     </form>
   </div>
+
   <div><a class="btn btn-outline-light btn-floating m-1" href="" target="_blank"
       style="border-radius: 100%; border-width: 2px;" role="button"><i class="bi bi-bag"></i></a></div>
-  <div><a class="btn btn-outline-light btn-floating m-1" href="" target="_blank"
-      style="border-radius: 100%; border-width: 2px;" role="button"><i class="fa fa-user-o" aria-hidden="true"
-        [routerLink]="['/login']"></i></a></div>
+
+  <div>
+    <a [routerLink]="(['/produto'])" class="btn btn-outline-light btn-floating m-1" style="border-radius: 100%; border-width: 2px;"
+      role="button">
+      <i class="fa fa-user-o" aria-hidden="true" ></i>
+    </a>
+  </div>
 </nav>
