--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -74,6 +74,11 @@
                                 </label>
                             </div>
                         </div>
+
+                        <div class="mt-2">
+                            <button class="btn-cancel-sm mr-2 mt-2" (click)="clearFiltro()">Limpar</button>
+                            <button class="btn-green-sm mr-2 mt-2">Filtrar</button>
+                        </div>
                         <!-- END -->
                     </div>
 
@@ -89,16 +94,17 @@
                         <div class="rolagem">
                             <div *ngFor="let ong of listaOngs" id="listOngas">
                                 <label for="ong + {{ong.id}}" class="select_label d-block mb-0">
-                                    <input (click)="addOng(ong)" type="checkbox" value="" name="ong1" id="1" class="m-lg-2"
-                                        (change)="ong1 = !ong1" />{{ong.nome}}
+                                    <input (click)="addOng(ong)" type="checkbox" value="" name="ong1" id="1"
+                                        class="m-lg-2" (change)="ong1 = !ong1" />{{ong.nome}}
                                     <span class="select_label-icon"></span>
                                 </label>
                             </div>
                         </div>
                         <div>
+                        </div>
+                        <div class="mt-2">
                             <button class="btn-cancel-sm mr-2 mt-2" (click)="clearFiltro()">Limpar</button>
-                            <button class="btn-green-sm mr-2 mt-2" (click)="getAllOngs()">Filtrar ONGs</button>
-                            <button class="btn-green-sm mr-2 mt-2" (click)="filtrarOng()">Filtrar ONGs unico</button>
+                            <button class="btn-green-sm mr-2 mt-2">Filtrar</button>
                         </div>
                         <!-- END -->
                     </div>
@@ -112,7 +118,7 @@
                             <div class="row d-flex align-content-center">
                                 <!-- Gallery item -->
 
-                                <div *ngFor="let produto of listaProdutos | paginate: { itemsPerPage: 2, currentPage: p }"
+                                <div *ngFor="let produto of listaProdutos | paginate: { itemsPerPage: 10, currentPage: p }"
                                     class="col-md-4 mb-2">
 
                                     <div class="bg-white rounded shadow-sm">
@@ -145,14 +151,9 @@
                                 <!-- End -->
 
                             </div>
-
-
                         </div>
-
                     </div>
-
                 </div>
-
             </div>
 
             <div class="d-flex align-content-end align-items-end justify-content-end">
@@ -164,4 +165,3 @@
         </div>
     </div>
 </div>
-
