Página e função de deletar categorias adicionada

--- a/src/app/deletar-categoria/deletar-categoria.component.css
+++ b/src/app/deletar-categoria/deletar-categoria.component.css
@@ -15,3 +15,11 @@
 .bgtitulo{
     background-color: #D0EFB1;
 }
+
+.titulo-pg {
+    height: 50vh;
+}
+
+.bg-green{
+    background-color: #366A55;
+}
