--- a/src/app/perfil/produto/produto.component.html
+++ b/src/app/perfil/produto/produto.component.html
@@ -27,8 +27,24 @@
                         <button
                             class="btn-green-sm align-items-center justify-content-center px-3 py-2 mt-2 text-center ponteiro"
                             [routerLink]="(['/cadastrarCategoria'])">CADASTRAR CATEGORIAS</button>
+
                     </div>
+
+                    <h4 class="mt-4 d-flex justify-content-end titulo-filtro">VISUALIZAR</h4>
+
+                    <hr class="linhas-titulo mb-1 mt-0">
+
+                    <form>
+                        <div class="input-group d-flex">
+                            <div class="input-group mt-2">
+                                <button class="btn-cancel-sm mr-2 mt-2" [routerLink]="(['/deletarCategoria'])">LISTAR CATEGORIAS</button>
+                            </div>
+
+                        </div>
+                    </form>
                 </div>
+
+                
 
                 <div class="col-md-9 d-flex">
 
