--- a/src/app/perfil/produto/produto.component.css
+++ b/src/app/perfil/produto/produto.component.css
@@ -19,11 +19,16 @@
 .ponteiro:hover {
     cursor: pointer;
     user-select: none;
-    background-color: #2c5746;
 }
 
 .pagination-orientation {
     display: block;
     align-items: flex-end !important;
     align-content: flex-end !important;
+}
+
+.button-block{
+    display: inline-block;
+    background-color: #2c5746;
+
 }
