--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,32 +40,12 @@
     <div class="col-md-12 d-flex align-items-center justify-content-center">
         <div class="pt- mx-3 mt-3 borda">
             <div class="px-5 pb-1 abcd">
-                <h6 class="font-size_2"> Mensagem </h6>
-                <p class="font-mensagem">“Só se vê bem com o coração, o essencial é invisível aos olhos” – Saint-Exupéry
-                    (O Pequeno Príncipe)</p>
+                <h6 class="font-size_2 text-center"> Mensagem </h6>
+                <p class="font-mensagem">"No começo pensei que estivesse lutando para salvar seringueiras, depois pensei que estava lutando para salvar a Floresta Amazônica. Agora, percebo que estou lutando pela humanidade."  Chico Mendes</p>
             </div>
         </div>
     </div>
 </div>
-
-<div class="container">
-    <div class="row d-flex justify-content-center my-5  d-flex border border-dark p-3 my-3">
-        <div class="col-sm-12 ">
-            <h3 class="font-size_2 text-center">Os ideais do nosso projeto</h3>
-            <p class="tamanho-textos">
-                Nosso projeto segue os ideais/princípios da Ods#2 Fome Zero e Agricultura Sustentável.
-                Que tem como meta acabar com a fome e garantir o acesso de todas as pessoas a alimentos seguros,
-                nutritivos e suficientes durante todo o ano. Com o foco em alcançar a segurança alimentar, melhoria da
-                nutrição e promover a agricultura sustentável. Com base nisso desenvolvemos um e-commerce focado em
-                produtos sustentáveis, onde uma parte dessas vendas será revertida em doações para ONGs de
-                desenvolvimento sustentável, com o objetivo de ajudar famílias de baixa renda.
-
-
-
-        </div>
-    </div>
-</div>
-
 <div class="container">
     <div class="row d-flex justify-content-center my-5    d-flex border border-dark p-3 my-3">
         <div class="col-sm-12">
@@ -79,11 +59,39 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="row d-flex justify-content-center my-5    d-flex border border-dark p-3 my-3">
+        <div class="col-sm-12">
+            <h3 class="font-size_2 text-center">"Mapa da fome no Brasil"</h3>
+            <p class="tamanho-textos">
+                
+                A pandemia agravou a fome no Brasil, que tem atualmente 33,1 milhões de pessoas sem ter o que comer. São 14 milhões de brasileiros a mais em insegurança alimentar em 2022, na comparação com 2020.
+                Seis em cada dez domicílios não conseguem manter acesso pleno à alimentação e possuem alguma preocupação com a escassez de alimentos no futuro, sendo as regiões Norte e Nordeste as mais impactadas.Isso de acordo com o 2º Inquérito Nacional sobre Insegurança Alimentar no Contexto da Pandemia no Brasil.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row d-flex justify-content-center my-5  d-flex border border-dark p-3 my-3">
+        <div class="col-sm-12 ">
+            <h3 class="font-size_2 text-center">Os ideais do nosso projeto</h3>
+            <p class="tamanho-textos">
+                Nosso projeto segue os princípios da ODS#2 Fome Zero e Agricultura Sustentável.
+                Que tem como meta acabar com a fome e garantir o acesso de todas as pessoas a alimentos seguros,
+                nutritivos e suficientes durante todo o ano. Com o foco em alcançar a segurança alimentar, melhoria da
+                nutrição e promover a agricultura sustentável. Com base nisso desenvolvemos um e-commerce focado em
+                produtos sustentáveis, onde uma parte dessas vendas será revertida em doações para ONGs de
+                desenvolvimento sustentável, com o objetivo de ajudar famílias de baixa renda.
+        </div>
+    </div>
+</div>
+
+
 <div class="container ">
     <div class="row d-flex justify-content-center my-5   d-flex border border-dark p-3 my-3">
         <div class="col-sm-12">
-            <h3 class="font-size_2 text-center">Como funciona?</h3>
-            <p class="tamanho-textos"> Comprando no nosso ecommerce, 50% de todo o lucro é revertido para ONGs que
+            <h3 class="font-size_2 text-center">Como funciona ?</h3> 
+            <p class="tamanho-textos"> Comprando em nosso ecommerce, 50% de todo o lucro é revertido para ONGs que
                 buscam combater a fome e a insegurança alimentar. Outros 45% dos lucros são retornados para as ONGs
                 parceiras que fornecem os produtos que são oferecidos no site, essa porcentagem é distribuída entre seus
                 colaboradores e na compra de matéria prima para a produção de mais produtos. E os 5% restantes ajudam a
