--- a/src/app/fundadores/fundadores.component.html
+++ b/src/app/fundadores/fundadores.component.html
@@ -43,7 +43,7 @@
                         </li>
                     </ul>
                 </div>
-                <p class="card-text text-center">Desenvolvedora Java FullStack, Gaúcha, residindo em São Paulo/SP</p>
+                <p class="card-text text-center">Desenvolvedora Java FullStack,Advogada, Gaúcha, residindo em São Paulo/SP</p>
             </div>
         </div>
 
@@ -77,7 +77,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedor Java FullStack, determinado e criativo!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack, apaixonado pelo Front-end, Embu das Artes-SP, determinado e criativo!</p>
         </div>
 
 
@@ -150,7 +150,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedor Java FullStack, proativo e determinado!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack, proativo, determinado e comunicativo, aprendendo com meus erros!</p>
         </div>
 
 
@@ -183,7 +183,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora Java FullStack, sou baiana, moro em São Paulo há 8 anos!</p>
+            <p class="card-text text-center">Desenvolvedora Full Stack Junior , busco a cada dia  atualizar  os conhecimentos para manter minha linha de profissionalismo em ascensão.!</p>
         </div>
 
 
@@ -214,7 +214,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedor Java FullStack e cursando Gestão Tecnologia da Informação!
+            <p class="card-text text-center">Desenvolvedor Java FullStack, interessado pelo Front-end, cursando Gestão Tecnologia da Informação, criatividade e autenticidade me definem!
             </p>
         </div>
 
