--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,7 +13,7 @@
         <!--<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light fs-16" [routerLink]="['/home']">Início</a>
+        <a class="nav-link text-light fs-16" [routerLink]="['/home']">Sobre Nós</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-light  fs-16" href="#" id="navbarDropdown" role="button"
