atualizando página de ongs

--- a/src/app/ongs/ongs.component.html
+++ b/src/app/ongs/ongs.component.html
@@ -12,7 +12,8 @@
       <div class="col-md-8 justify-content-space-between">
 
         <div class="card-body">
-          <h5 class="card-title my-4">NatuSkin Cosmétics:</h5>
+          <h5 class="card-title mt-4 mb-1">NatuSkin Cosmétics:</h5>
+          <h6 class="text-edit mb-3">Cosméticos naturais e veganos</h6>
           <p class="card-text text-justify">Acreditamos que é possível cuidar de nós sem agredir o meio
             ambiente, por isso nós da NatuSkin Cosmetics, criamos produtos ficados no autocuidado
             tendo em sua composição apenas ingredientes orgânicos, nossas ideologias também refletem
@@ -41,7 +42,8 @@
       <div class="col-md-8 justify-content-space-between">
 
         <div class="card-body">
-          <h5 class="card-title my-4">Reciclando e Alimentando:</h5>
+          <h5 class="card-title mt-4 mb-1">Reciclando e Alimentando:</h5>
+          <h6 class="text-edit mb-3">Papelaria e embalagens</h6>
           <p class="card-text text-justify">Cooperativa que atua nas causas ambientais, sua missão é coletar,
             reutilizar e converter suas ações em recursos para a população local. Através desse
             projeto é possível prestar assistência a famílias de baixa renda com o fornecimento
@@ -68,7 +70,8 @@
       <div class="col-md-8 justify-content-space-between">
 
         <div class="card-body">
-          <h5 class="card-title my-4">ECOnsciente:</h5>
+          <h5 class="card-title mt-4 mb-1">ECOnsciente:</h5>
+          <h6 class="text-edit mb-3">Acessórios e decorações</h6>
           <p class="card-text text-justify">Somos uma Ong que apoia os pequenos empreendedores da área
             agrícola e artesanal, nossa meta é promover maior visibilidade de seus produtos
             no mercado, permitindo assim a inclusão dos mesmos em um cenário econômico muito
@@ -95,7 +98,8 @@
       <div class="col-md-8 justify-content-space-between">
 
         <div class="card-body">
-          <h5 class="card-title my-4">ECO+VEST:</h5>
+          <h5 class="card-title mt-4 mb-1">ECO+VEST:</h5>
+          <h6 class="text-edit mb-3">Vestimentas</h6>
           <p class="card-text text-justify">Moda sustentável é a nossa missão, acreditamos em um
             futuro onde seja possível viver sem agredir o meio ambiente.
             As peças ECO+VEST são compostas por 50% garrafa pet reciclado e 50% algodão.
