--- a/src/app/fundadores/fundadores.component.html
+++ b/src/app/fundadores/fundadores.component.html
@@ -43,7 +43,8 @@
                         </li>
                     </ul>
                 </div>
-                <p class="card-text text-center">Desenvolvedora Java FullStack,Advogada, Gaúcha, residindo em São Paulo/SP</p>
+                <p class="card-text text-center">Desenvolvedora Java FullStack, Advogada em transição de carreira, Gaúcha, organizada e focada, residindo em São Paulo/SP!
+                </p>
             </div>
         </div>
 
@@ -77,7 +78,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedor Java FullStack, apaixonado pelo Front-end, Embu das Artes-SP, determinado e criativo!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack, futuro Front-end, Embu das Artes-SP, determinado e criativo!</p>
         </div>
 
 
@@ -109,8 +110,8 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora Java apaixonada pelo Back-end e cursando Análise e
-                Desenvolvimento de Sistemas!</p>
+            <p class="card-text text-center">Desenvolvedora Java FullStack, interessada pelo Back-end e atualmente cursando Análise e Desenvolvimento de Sistemas!
+            </p>
         </div>
 
     </div>
@@ -150,7 +151,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedor Java FullStack, proativo, determinado e comunicativo, aprendendo com meus erros!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack,futuro Front-end, em transição de carreira, proativo e comunicativo!</p>
         </div>
 
 
